# liblithium

./: .clang-format  .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE  Makefile  NOTICE  README.md  SConstruct  SECURITY.md  archive.bash  archive.sh  black-check.bash  black-check.sh  build.sh  docker.bash  docker.sh  ffibuilder.py  gimli.c  gimli.h  gimli_hash.c  gimli_hash.h  release.bash  release.sh  requirements-ci.txt  setup.py  test.c  test_hash.c  test_sign.bash  win.bat
.trustinsoft/: SConscript  base.json  config.json  decrypt.c  encrypt.c  hash.c  keygen.c  sign.c  unknown_random.c  verify.c  x25519.c
doc/: verify.tex
examples/: SConscript  dummy-verify.c  gimli-hash.c  lith-keygen.c  lith-sign.c  lith-verify.c  null-gimli-aead.c  null-gimli-hash.c  null-lith-sign.c  null-lith-verify.c
hydro/: LICENSE  SConscript  hydrogen.c  hydrogen.h
py/: __init__.py  _random.py  gimli_hash.py  sign.py
py_src/: __init__.py  gimli_hash.py  sign.py
rust/: build.rs  wrapper.h
scripts/: run_c_edge_tests.sh  test_hydro.bash  test_sign.bash
src/: SConscript  SConscript-random  bytes.c  bytes.h  carry.h  fe.c  fe.h  gimli.c  gimli_aead.c  gimli_common.c  gimli_common.h  gimli_hash.c  gimli_vector.c  lith_endian.h  memzero.c  memzero.h  opt.h  random.c  sign.c  x25519.c  x25519.h
test/: LWC_AEAD_KAT_256_128.txt  LWC_HASH_KAT_256.txt  SConscript  edge_cases_verify.c  sc_reduce.c  sc_reduce.h  test_fe.c  test_gimli.c  test_gimli_hash.c  test_gimli_hash.exp  test_gimli_hash.py  test_lwc_aead_kat.c  test_lwc_hash_kat.c  test_reduce.c  test_sign.py  test_x25519.c
(+36 files in other folders)
